--- a/Pages/mention.html
+++ b/Pages/mention.html
@@ -44,6 +44,44 @@
             <h2>Mentions légales</h2>
         </div>
         <div class="back-f">
+            <div class="mention">
+                <h3>1 - Édition du site</h3>
+                <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie
+                    numérique, il est précisé aux utilisateurs du site internet https://pooh5159.github.io/Portfolio/
+                    l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi:</p>
+                <p>Propriétaire et réalisation du site : PIERSON Pauline - Contact : Pierson.Pauline@gmail.com - Adresse
+                    : 10000 TROYES.</p>
+                <br>
+                <h3>2 - Propriété intellectuelle et contrefaçons</h3>
+                <p>PIERSON Pauline est propriétaire des droits de propriété intellectuelle et détient les droits d’usage
+                    sur tous les éléments accessibles sur le site internet, notamment les textes, images, graphismes,
+                    logos, vidéos, architecture, icônes et sons.</p>
+                <p>Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des
+                    éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation
+                    écrite préalable de PIERSON Pauline.</p>
+                <p>Toute exploitation non autorisée du site ou de l’un quelconque des éléments qu’il contient sera
+                    considérée comme constitutive d’une contrefaçon et poursuivie conformément aux dispositions des
+                    articles L.335-2 et suivants du Code de Propriété Intellectuelle.</p>
+                <br>
+                <h3>3 - Limitations de responsabilité</h3>
+                <p>PIERSON Pauline ne pourra être tenu pour responsable des dommages directs et indirects causés au
+                    matériel de l’utilisateur, lors de l’accès au site https://pooh5159.github.io/Portfolio/.</p>
+                <p>PIERSON Pauline décline toute responsabilité quant à l’utilisation qui pourrait être faite des
+                    informations et contenus présents sur https://pooh5159.github.io/Portfolio/.</p>
+                <p>PIERSON Pauline s’engage à sécuriser au mieux le site https://pooh5159.github.io/Portfolio/,
+                    cependant sa responsabilité ne pourra être mise en cause si des données indésirables sont importées
+                    et installées sur son site à son insu.</p>
+                <br>
+                <h3>4 - Liens hypertextes</h3>
+                <p>Le site https://pooh5159.github.io/Portfolio/ contient des liens hypertextes vers d’autres sites et
+                    dégage toute responsabilité à propos de ces liens externes ou des liens créés par d’autres sites
+                    vers https://pooh5159.github.io/Portfolio/.</p>
+                <br>
+                <h3>5 - Droit applicable et attribution de juridiction</h3>
+                <p>Tout litige en relation avec l’utilisation du site https://pooh5159.github.io/Portfolio/ est soumis
+                    au droit français. En dehors des cas où la loi ne le permet pas, il est fait attribution exclusive
+                    de juridiction aux tribunaux compétents de Troyes.</p>
+            </div>
         </div>
         <!-- FIN MENTION -->
     </body>
