--- a/Pages/web.html
+++ b/Pages/web.html
@@ -102,7 +102,7 @@
         <a href="../Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
-        <h4>Pauline Pierson - Tout droit réservé - <a href="../Pages/mention.html">Mentions légales</a></h4>
+        <h4>Tout droit réservé © Pauline Pierson - <a href="../Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
