--- a/Pages/print.html
+++ b/Pages/print.html
@@ -48,17 +48,17 @@
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2019</h2>
                 <div class="slideshow-container thisSlide" id="slide">
                     <div class="mySlides fade">
-                        <img id="myImg47" onclick="clickNext('myImg47')"
+                        <img id="myImg53" onclick="clickNext('myImg53')"
                             src="../Images/Print/Concert Noël 2019/Affiche Noël 2019-1.png" alt="Affiche GVPD"
                             title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg48" onclick="clickNext('myImg48')"
+                        <img id="myImg54" onclick="clickNext('myImg54')"
                             src="../Images/Print/Concert Noël 2019/Programme concert Noël 2019-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg49" onclick="clickNext('myImg49')"
+                        <img id="myImg55" onclick="clickNext('myImg55')"
                             src="../Images/Print/Concert Noël 2019/Programme concert Noël 2019-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
@@ -76,17 +76,17 @@
                 <h2>Groupe Vocal des Pays du Der<br>8 juin 2019</h2>
                 <div class="slideshow-container thisSlide" id="slide1">
                     <div class="mySlides fade">
-                        <img id="myImg44" onclick="clickNext('myImg44')"
+                        <img id="myImg50" onclick="clickNext('myImg50')"
                             src="../Images/Print/Concert 8 juin 2019/Affiche concert 8 juin 2019-1.png"
                             alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg45" onclick="clickNext('myImg45')"
+                        <img id="myImg51" onclick="clickNext('myImg51')"
                             src="../Images/Print/Concert 8 juin 2019/Programme concert 8 Juin 2019-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg46" onclick="clickNext('myImg46')"
+                        <img id="myImg52" onclick="clickNext('myImg52')"
                             src="../Images/Print/Concert 8 juin 2019/Programme concert 8 Juin 2019-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
@@ -104,17 +104,17 @@
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2018</h2>
                 <div class="slideshow-container thisSlide" id="slide2">
                     <div class="mySlides fade">
-                        <img id="myImg41" onclick="clickNext('myImg41')"
+                        <img id="myImg47" onclick="clickNext('myImg47')"
                             src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png"
                             alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg42" onclick="clickNext('myImg42')"
+                        <img id="myImg48" onclick="clickNext('myImg48')"
                             src="../Images/Print/Concert Noël 2018/Programme concert Noël 2018-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg43" onclick="clickNext('myImg43')"
+                        <img id="myImg49" onclick="clickNext('myImg49')"
                             src="../Images/Print/Concert Noël 2018/Programme concert Noël 2018-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
@@ -217,6 +217,7 @@
                         <span class="dot" onclick="currentSlide(slide3,11)"></span>
                         <span class="dot" onclick="currentSlide(slide3,12)"></span>
                         <span class="dot" onclick="currentSlide(slide3,13)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,14)"></span>
                     </div>
                 </div>
                 <p>Faire part et livret de messe pour le baptême de Luu Nha L.</p>
