tunr jpg to png

--- a/Pages/print.html
+++ b/Pages/print.html
@@ -305,107 +305,107 @@
                 <div class="slideshow-container thisSlide" id="slide7">
                     <div class="mySlides fade">
                         <img id="myImg3" onclick="clickNext('myImg3')"
-                            src="../Images/Print/Le Comptoir de Toamasina/LOGO.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/LOGO.png"
                             alt="Le Comptoir de Toamasina Logo" title="Logo" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg4" onclick="clickNext('myImg4')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EPICES CURCUMA.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EPICES CURCUMA.png"
                             alt="Le Comptoir de Toamasina Curcuma" title="Étiquette Curcuma" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg5" onclick="clickNext('myImg5')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EPICES CURRY.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EPICES CURRY.png"
                             alt="Le Comptoir de Toamasina Curry" title="Étiquette Curry" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg6" onclick="clickNext('myImg6')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CAFÉ.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CAFÉ.png"
                             alt="Le Comptoir de Toamasina Extrait Café" title="Étiquette Extrait de Café" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg7" onclick="clickNext('myImg7')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CANNELLE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CANNELLE.png"
                             alt="Le Comptoir de Toamasina Extrait Cannelle" title="Étiquette Extrait de Cannelle" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg8" onclick="clickNext('myImg8')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CITRON.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CITRON.png"
                             alt="Le Comptoir de Toamasina Extrait Citron" title="Étiquette Extrait de Citron" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg9" onclick="clickNext('myImg9')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT FLEUR D'ORANGER.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT FLEUR D'ORANGER.png"
                             alt="Le Comptoir de Toamasina Extrait Fleur d'oranger" title="Étiquette Extrait de Fleur d'oranger" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg10" onclick="clickNext('myImg10')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT FRAMBOISE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT FRAMBOISE.png"
                             alt="Le Comptoir de Toamasina Extrait Framboise" title="Étiquette Extrait de Framboise" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg11" onclick="clickNext('myImg11')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT ROSE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT ROSE.png"
                             alt="Le Comptoir de Toamasina Extrait Rose" title="Étiquette Extrait de Rose" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg12" onclick="clickNext('myImg12')"
-                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT VANILLE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT VANILLE.png"
                             alt="Le Comptoir de Toamasina Extrait Vanille" title="Étiquette Extrait de Vanille" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg13" onclick="clickNext('myImg13')"
-                            src="../Images/Print/Le Comptoir de Toamasina/GOUSSES VANILLE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/GOUSSES VANILLE.png"
                             alt="Le Comptoir de Toamasina Gousse Vanille" title="Étiquette Gousses de Vanille" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg14" onclick="clickNext('myImg14')"
-                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE BLANC.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE BLANC.png"
                             alt="Le Comptoir de Toamasina Poivre Blanc" title="Étiquette Poivre Blanc" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg15" onclick="clickNext('myImg15')"
-                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE CUBEBE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE CUBEBE.png"
                             alt="Le Comptoir de Toamasina Poivre Cubèbe" title="Étiquette Poivre Cubèbe" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg16" onclick="clickNext('myImg16')"
-                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE LONG FRUIT.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE LONG FRUIT.png"
                             alt="Le Comptoir de Toamasina Poivre Long Fruit" title="Étiquette Poivre Long Fruit" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg17" onclick="clickNext('myImg17')"
-                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE NOIR.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE NOIR.png"
                             alt="Le Comptoir de Toamasina Poivre Noir" title="Étiquette Poivre Noir" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg18" onclick="clickNext('myImg18')"
-                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE PIMENT DE JAMAÏQUE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/POIVRE PIMENT DE JAMAÏQUE.png"
                             alt="Le Comptoir de Toamasina Poivre Piment de Jamaïque" title="Étiquette Poivre Piment de Jamaïque" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg19" onclick="clickNext('myImg19')"
-                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE CANNELLE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE CANNELLE.png"
                             alt="Le Comptoir de Toamasina Sucre Cannelle" title="Étiquette Sucre à la Cannelle" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg20" onclick="clickNext('myImg20')"
-                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE CITRON.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE CITRON.png"
                             alt="Le Comptoir de Toamasina Sucre Citron" title="Étiquette Sucre au Citron" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg21" onclick="clickNext('myImg21')"
-                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE ORANGE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE ORANGE.png"
                             alt="Le Comptoir de Toamasina Sucre Orange" title="Étiquette Sucre à l'Orange" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg22" onclick="clickNext('myImg22')"
-                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE VANILLE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/SUCRE VANILLE.png"
                             alt="Le Comptoir de Toamasina Sucre Vanille" title="Étiquette Sucre à la Vanille" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg23" onclick="clickNext('myImg23')"
-                            src="../Images/Print/Le Comptoir de Toamasina/VIERGE.jpg"
+                            src="../Images/Print/Le Comptoir de Toamasina/VIERGE.png"
                             alt="Le Comptoir de Toamasina Vierge" title="Étiquette Vierge" style="min-width:100%">
                     </div>
                     <a class="prev" onclick="plusSlides(slide7,-1)">&#10094;</a>
