--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,9 @@
         <!-- HEADER -->
         <div class="header">
             <div class="PP">
-                <a href="../index.html"><h1>Pauline Pierson</h1></a>
+                <a href="../index.html">
+                    <h1>Pauline Pierson</h1>
+                </a>
             </div>
             <div class="onglet">
                 <a href="../Pages/print.html">
@@ -41,7 +44,21 @@
             <h2>Contact</h2>
         </div>
         <div class="back-card">
-
+            <div class="contact">
+                <h3>Mail</h3>
+                <a href="mailto:Pierson.Pauline@gmail.com">
+                    <img src="../Images/Contact/kisspng-business-envelope-mail-envelope-design-5b30c92e7b1f93.7981246415299238865043.png"
+                        alt="Mail">
+                </a>
+                <p>Pierson.Pauline@gmail.com</p>
+            </div>
+            <span class="vertical-line"></span>
+            <div class="contact">
+                <h3>LinkedIn</h3>
+                <a href="http://" target="_blank" alt="LinkedIn">
+                    <img src="../Images/Contact/Logo LinkedIn noir.png" alt="LinkedIn">
+                </a>
+            </div>
         </div>
         <!-- FIN CONTACT -->
 
