--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -55,7 +55,7 @@
             <span class="vertical-line"></span>
             <div class="contact">
                 <h3>LinkedIn</h3>
-                <a href="http://" target="_blank" alt="LinkedIn">
+                <a href="http://https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank" alt="LinkedIn">
                     <img src="../Images/Contact/Logo LinkedIn noir.png" alt="LinkedIn">
                 </a>
             </div>
