--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -81,11 +81,11 @@
                     <img src="../Images/WhoamI/Logo Indesign.png" alt="Id" title="Indesign">
                     <img src="../Images/WhoamI/Logo Ilustrator.png" alt="Ai" title="Illustraor">
                     <img src="../Images/WhoamI/Logo Photoshop.png" alt="Ps" title="Photoshop">
-                    <img src="../Images/WhoamI/Visual_Studio_Code_1.35_icon.svg.png" alt="VSC"
+                    <img src="../Images/WhoamI/Logo Visual Studio Code.png" alt="VSC"
                         title="Visual Studio Code">
                     <img src="../Images/WhoamI/Logo Pack Office.png" alt="Office" title="Suite Office">
-                    <img src="../Images/WhoamI/figma_logo_icon_170157.png" alt="Figma" title="Figma">
-                    <img src="../Images/WhoamI/wordpress-logo-29017.png" alt="Wordpress" title="Wordpress">
+                    <img src="../Images/WhoamI/Logo Figma.png" alt="Figma" title="Figma">
+                    <img src="../Images/WhoamI/Logo Wordpress.png" alt="Wordpress" title="Wordpress">
                 </div>
                 <div class="col lang">
                     <h3>Langages</h3>
