--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <a href="../Portfolio/Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
-        <h4>Tout droit réservé © Pauline Pierson - <a href="../Portfolio/Pages/mention.html">Mentions légales</a></h4>
+        <h4>Tout droit réservé © Pauline Pierson</h4>
+        <h4><a href="../Portfolio/Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
