--- a/Pages/print.html
+++ b/Pages/print.html
@@ -48,17 +48,17 @@
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2019</h2>
                 <div class="slideshow-container thisSlide" id="slide">
                     <div class="mySlides fade">
-                        <img id="myImg53" onclick="clickNext('myImg53')"
+                        <img id="myImg56" onclick="clickNext('myImg56')"
                             src="../Images/Print/Concert Noël 2019/Affiche Noël 2019-1.png" alt="Affiche GVPD"
                             title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg54" onclick="clickNext('myImg54')"
+                        <img id="myImg57" onclick="clickNext('myImg57')"
                             src="../Images/Print/Concert Noël 2019/Programme concert Noël 2019-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg55" onclick="clickNext('myImg55')"
+                        <img id="myImg58" onclick="clickNext('myImg58')"
                             src="../Images/Print/Concert Noël 2019/Programme concert Noël 2019-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
@@ -76,17 +76,17 @@
                 <h2>Groupe Vocal des Pays du Der<br>8 juin 2019</h2>
                 <div class="slideshow-container thisSlide" id="slide1">
                     <div class="mySlides fade">
-                        <img id="myImg50" onclick="clickNext('myImg50')"
+                        <img id="myImg53" onclick="clickNext('myImg53')"
                             src="../Images/Print/Concert 8 juin 2019/Affiche concert 8 juin 2019-1.png"
                             alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg51" onclick="clickNext('myImg51')"
+                        <img id="myImg54" onclick="clickNext('myImg54')"
                             src="../Images/Print/Concert 8 juin 2019/Programme concert 8 Juin 2019-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg52" onclick="clickNext('myImg52')"
+                        <img id="myImg55" onclick="clickNext('myImg55')"
                             src="../Images/Print/Concert 8 juin 2019/Programme concert 8 Juin 2019-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
@@ -104,17 +104,17 @@
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2018</h2>
                 <div class="slideshow-container thisSlide" id="slide2">
                     <div class="mySlides fade">
-                        <img id="myImg47" onclick="clickNext('myImg47')"
+                        <img id="myImg50" onclick="clickNext('myImg50')"
                             src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png"
                             alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg48" onclick="clickNext('myImg48')"
+                        <img id="myImg51" onclick="clickNext('myImg51')"
                             src="../Images/Print/Concert Noël 2018/Programme concert Noël 2018-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg49" onclick="clickNext('myImg49')"
+                        <img id="myImg52" onclick="clickNext('myImg52')"
                             src="../Images/Print/Concert Noël 2018/Programme concert Noël 2018-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
@@ -132,72 +132,72 @@
                 <h2>Luu Nha L.</h2>
                 <div class="slideshow-container thisSlide" id="slide3">
                     <div class="mySlides fade">
-                        <img id="myImg33" onclick="clickNext('myImg33')"
+                        <img id="myImg36" onclick="clickNext('myImg36')"
                             src="../Images/Print/Baptême Luu Nha L/Faire part Luu Nha L (1).png"
                             alt="Faire Part Luu Nha L" title="Faire part R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg34" onclick="clickNext('myImg34')"
+                        <img id="myImg37" onclick="clickNext('myImg37')"
                             src="../Images/Print/Baptême Luu Nha L/Faire part Luu Nha L (2).png"
                             alt="Faire Part Luu Nha L" title="Faire part V°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg35" onclick="clickNext('myImg35')"
+                        <img id="myImg38" onclick="clickNext('myImg38')"
                             src="../Images/Print/Baptême Luu Nha L/Photo faire part Luu Nha L.png"
                             alt="Faire Part Luu Nha L" title="Photo Faire part Luu Nha L." style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg36" onclick="clickNext('myImg36')"
+                        <img id="myImg39" onclick="clickNext('myImg39')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (1).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 1" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg37" onclick="clickNext('myImg37')"
+                        <img id="myImg40" onclick="clickNext('myImg40')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (2).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 3" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg38" onclick="clickNext('myImg38')"
+                        <img id="myImg41" onclick="clickNext('myImg41')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (3).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg39" onclick="clickNext('myImg39')"
+                        <img id="myImg42" onclick="clickNext('myImg42')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (4).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 5" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg40" onclick="clickNext('myImg40')"
+                        <img id="myImg43" onclick="clickNext('myImg43')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (5).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 6" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg41" onclick="clickNext('myImg41')"
+                        <img id="myImg44" onclick="clickNext('myImg44')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (6).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 7" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg42" onclick="clickNext('myImg42')"
+                        <img id="myImg45" onclick="clickNext('myImg45')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (7).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 8" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg43" onclick="clickNext('myImg43')"
+                        <img id="myImg46" onclick="clickNext('myImg46')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (8).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 9" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg44" onclick="clickNext('myImg44')"
+                        <img id="myImg47" onclick="clickNext('myImg47')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (9).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 10" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg45" onclick="clickNext('myImg45')"
+                        <img id="myImg48" onclick="clickNext('myImg48')"
                             src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (10).png"
                             alt="Livret de messe Luu Nha L" title="Livret de messe page 11" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg46" onclick="clickNext('myImg46')"
+                        <img id="myImg49" onclick="clickNext('myImg49')"
                             src="../Images/Print/Baptême Luu Nha L/Photo livret Luu Nha L.png"
                             alt="Faire Part Luu Nha L" title="Photo Livret de messe Luu Nha L." style="min-width:100%">
                     </div>
@@ -226,17 +226,17 @@
                 <h2>Léna P.</h2>
                 <div class="slideshow-container thisSlide" id="slide4">
                     <div class="mySlides fade">
-                        <img id="myImg30" onclick="clickNext('myImg30')"
+                        <img id="myImg33" onclick="clickNext('myImg33')"
                             src="../Images/Print/Faire part Léna P/Faire part Léna final-1.png"
                             alt="Faire part Léna P." title="Faire part R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg31" onclick="clickNext('myImg31')"
+                        <img id="myImg34" onclick="clickNext('myImg34')"
                             src="../Images/Print/Faire part Léna P/Faire part Léna final-2.png"
                             alt="Faire part Léna P." title="Faire part V°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg32" onclick="clickNext('myImg32')"
+                        <img id="myImg35" onclick="clickNext('myImg35')"
                             src="../Images/Print/Faire part Léna P/Photo faire part Léna P.png"
                             alt="Faire part Léna P." title="Photo Faire part Léna P." style="min-width:100%">
                     </div>
@@ -254,17 +254,17 @@
                 <h2>Éthan D.</h2>
                 <div class="slideshow-container thisSlide" id="slide5">
                     <div class="mySlides fade">
-                        <img id="myImg27" onclick="clickNext('myImg27')"
+                        <img id="myImg30" onclick="clickNext('myImg30')"
                             src="../Images/Print/Faire part Ethan D/Faire part Ethan D (1).png"
                             alt="Faire part Ethan D." title="Faire part proposition 1" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg28" onclick="clickNext('myImg28')"
+                        <img id="myImg31" onclick="clickNext('myImg31')"
                             src="../Images/Print/Faire part Ethan D/Faire part Ethan D (2).png"
                             alt="Faire part Ethan D." title="Faire part proposition 2" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg29" onclick="clickNext('myImg29')"
+                        <img id="myImg32" onclick="clickNext('myImg32')"
                             src="../Images/Print/Faire part Ethan D/Photo faire part Ethan D.png"
                             alt="Faire part Ethan D." title="Photo Faire part Ethan D." style="min-width:100%">
                     </div>
@@ -282,12 +282,12 @@
                 <h2>MCD Communication</h2>
                 <div class="slideshow-container thisSlide" id="slide6">
                     <div class="mySlides fade">
-                        <img id="myImg25" onclick="clickNext('myImg25')"
+                        <img id="myImg28" onclick="clickNext('myImg28')"
                             src="../Images/Print/MCD Communication/Carte voeux 2013.png"
                             alt="Carte de voeux" title="Carte de voeux" style="min-width:100%">
                     </div>
                     <div class="mySlides fade">
-                        <img id="myImg26" onclick="clickNext('myImg26')"
+                        <img id="myImg29" onclick="clickNext('myImg29')"
                             src="../Images/Print/MCD Communication/Photo carte de voeux.png"
                             alt="Carte de voeux" title="Photo Carte de voeux" style="min-width:100%">
                     </div>
@@ -408,6 +408,26 @@
                             src="../Images/Print/Le Comptoir de Toamasina/VIERGE.png"
                             alt="Le Comptoir de Toamasina Vierge" title="Étiquette Vierge" style="min-width:100%">
                     </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg24" onclick="clickNext('myImg24')"
+                            src="../Images/Print/Le Comptoir de Toamasina/Photo etiquettes (1).png"
+                            alt="Le Comptoir de Toamasina Photo Étiquettes" title="Photo Étiquettes" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg25" onclick="clickNext('myImg25')"
+                            src="../Images/Print/Le Comptoir de Toamasina/Photo etiquettes (2).png"
+                            alt="Le Comptoir de Toamasina Photo Étiquettes" title="Photo Étiquettes" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg26" onclick="clickNext('myImg26')"
+                            src="../Images/Print/Le Comptoir de Toamasina/Photo etiquettes (3).png"
+                            alt="Le Comptoir de Toamasina Photo Étiquettes" title="Photo Étiquettes" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg27" onclick="clickNext('myImg27')"
+                            src="../Images/Print/Le Comptoir de Toamasina/Photo etiquette posées.png"
+                            alt="Le Comptoir de Toamasina Photo Étiquettes posées" title="Photo Étiquettes posées" style="min-width:100%">
+                    </div>
                     <a class="prev" onclick="plusSlides(slide7,-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(slide7,1)">&#10095;</a>
                     <div class="dots" style="text-align:center">
@@ -433,6 +453,10 @@
                         <span class="dot" onclick="currentSlide(slide7,20)"></span>
                         <span class="dot" onclick="currentSlide(slide7,21)"></span>
                         <span class="dot" onclick="currentSlide(slide7,22)"></span>
+                        <span class="dot" onclick="currentSlide(slide7,23)"></span>
+                        <span class="dot" onclick="currentSlide(slide7,24)"></span>
+                        <span class="dot" onclick="currentSlide(slide7,25)"></span>
+                        <span class="dot" onclick="currentSlide(slide7,26)"></span>
                     </div>
                 </div>
                 <p>Réalisation d'un logo et d'étiquettes</p>
