add back to top button

--- a/Pages/web.html
+++ b/Pages/web.html
@@ -94,6 +94,7 @@
                 <div id="caption"></div>
             </div>
         </div>
+        <button onclick="topFunction()" id="toTop" title="Retour en haut"><i class="gg-chevron-up"></i></button>
         <!-- FIN WORK -->
         <script src="app.js" defer></script>
     </body>
