--- a/Pages/web.html
+++ b/Pages/web.html
@@ -63,7 +63,7 @@
                         <span class="dot" onclick="currentSlide(slide,2)"></span>
                     </div>
                 </div>
-                <p>Site réalisé sous Wordpress durant le stage en RAN Pro <a href="https://troyespetitschats.fr/"
+                <p>Site vitrine réalisé sous Wordpress durant le stage en RAN Pro <a href="https://troyespetitschats.fr/"
                         target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div class="card">
@@ -85,7 +85,7 @@
                         <span class="dot" onclick="currentSlide(slide1,2)"></span>
                     </div>
                 </div>
-                <p>E-boutique réalisée en local sous Wordpress</p>
+                <p>E-boutique réalisée sous Wordpress en local</p>
             </div>
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
