--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -47,9 +47,8 @@
             <div class="row">
                 <div class="col">
                     <h3>Présentation</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, fuga.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque ipsum porro nemo
-                        laudantium, animi accusantium voluptate cumque vero eum!</p>
+                    <p>Graphiste print de formation, je me suis dirigée par la suite vers la fabrication (terme pour désigner les bureaux d'études en imprimerie), métier que j'appréciais pour sa demande de réflexion et ses enjeux.</p>
+                    <p>Voulant explorer de nouveaux horizons, je me suis orientée vers le web afin d'ajouter de nouvelles compétences à ma formation print et pourquoi pas devenir une future développeuse/webdesigner.</p>
                     <div class="row center">
                         <div class="col">
                             <a href="https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank">
