add to top button

--- a/Pages/mention.html
+++ b/Pages/mention.html
@@ -83,6 +83,7 @@
                     de juridiction aux tribunaux compétents de Troyes.</p>
             </div>
         </div>
+        <button onclick="topFunction()" id="toTop" title="Retour en haut"><i class="gg-chevron-up"></i></button>
         <!-- FIN MENTION -->
     </body>
 
