--- a/Pages/mention.html
+++ b/Pages/mention.html
@@ -85,6 +85,7 @@
         </div>
         <button onclick="topFunction()" id="toTop" title="Retour en haut"><i class="gg-chevron-up"></i></button>
         <!-- FIN MENTION -->
+        <script src="app.js" defer></script>
     </body>
 
     <footer class="foot">
