--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -55,7 +55,7 @@
             <span class="vertical-line"></span>
             <div class="contact">
                 <h3>LinkedIn</h3>
-                <a href="http://https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank" alt="LinkedIn">
+                <a href="https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank" alt="LinkedIn">
                     <img src="../Images/Contact/Logo LinkedIn noir.png" alt="LinkedIn">
                 </a>
             </div>
@@ -66,7 +66,7 @@
             <a href="../Pages/whoami.html">
                 <h4>Qui suis-je ?</h4>
             </a>
-            <h4>Tout droit réservé © Pauline Pierson</h4>
+            <h4>Tous droits réservés © Pauline Pierson</h4>
         <h4><a href="../Pages/mention.html">Mentions légales</a></h4>
         </footer>
 
