--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -103,7 +103,7 @@
         <a href="../Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
-        <h4>Tout droit réservé © Pauline Pierson</h4>
+        <h4>Tous droits réservés © Pauline Pierson</h4>
         <h4><a href="../Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
