--- a/Pages/mention.html
+++ b/Pages/mention.html
@@ -22,17 +22,17 @@
             </div>
             <div class="onglet">
                 <div class="rond" id="print">
-                    <a href="../Pages/print.html">
+                    <a href="print.html">
                         <h3>Print</h3>
                     </a>
                 </div>
                 <div class="rond" id="web">
-                    <a href="../Pages/web.html">
+                    <a href="web.html">
                         <h3>Web</h3>
                     </a>
                 </div>
                 <div class="rond" id="contact">
-                    <a href="../Pages/contact.html">
+                    <a href="contact.html">
                         <h3>Contact</h3>
                     </a>
                 </div>
@@ -87,11 +87,11 @@
     </body>
 
     <footer class="foot">
-        <a href="../Pages/whoami.html">
+        <a href="whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
         <h4>Tous droits réservés © Pauline Pierson</h4>
-        <h4><a href="../Pages/mention.html">Mentions légales</a></h4>
+        <h4><a href="mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
