--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -63,7 +63,7 @@
         <!-- FIN CONTACT -->
 
         <footer class="foot">
-            <a href="/whoami.html">
+            <a href="whoami.html">
                 <h4>Qui suis-je ?</h4>
             </a>
             <h4>Tous droits réservés © Pauline Pierson</h4>
