--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -21,17 +21,17 @@
                 </a>
             </div>
             <div class="onglet">
-                <a href="print.html">
+                <a href="../Pages/print.html">
                     <div class="rond" id="print">
                         <h3>Print</h3>
                     </div>
                 </a>
-                <a href="web.html">
+                <a href="../Pages/web.html">
                     <div class="rond" id="web">
                         <h3>Web</h3>
                     </div>
                 </a>
-                <a href="contact.html">
+                <a href="../Pages/contact.html">
                     <div class="rond" id="contact">
                         <h3>Contact</h3>
                     </div>
@@ -100,11 +100,11 @@
     </body>
 
     <footer class="foot">
-        <a href="whoami.html">
+        <a href="../Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
         <h4>Tous droits réservés © Pauline Pierson</h4>
-        <h4><a href="mention.html">Mentions légales</a></h4>
+        <h4><a href="../Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
